Add rand dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Mita <martin.pelletier78@hotmail.com>"]
 edition = "2018"
 
 [dependencies]
+rand = "0.6.5"
+
 [dependencies.sdl2]
 version = "0.30"
 default-features = false
